<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewBillTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Bill Total :"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/textViewBillTotal" />

    <EditText
        android:id="@+id/editTextNumberBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/editTextNumberBill"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textViewBillTotal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTipPercent"
        android:layout_width="54dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/textViewTipPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBillTotal" />

    <RadioGroup
        android:id="@+id/radioGroupTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textViewTipPercent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberBill">

        <RadioButton
            android:id="@+id/radioButton10Percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioButton10Percent" />

        <RadioButton
            android:id="@+id/radioButton15Percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton15Percent" />

        <RadioButton
            android:id="@+id/radioButton18Percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton18Percent" />

        <RadioButton
            android:id="@+id/radioButtonCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonCustom" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/textViewCustom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipPercent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="223dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:max="50"
        android:progress="40"
        app:layout_constraintStart_toEndOf="@+id/textViewCustom"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTip" />

    <TextView
        android:id="@+id/textViewSeekBar"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/textViewSeekBar"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTip" />

    <TextView
        android:id="@+id/textViewTip"
        android:layout_width="38dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/textViewTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustom" />

    <TextView
        android:id="@+id/textViewTipAmount"
        android:layout_width="95dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/textViewTipAmount"
        app:layout_constraintStart_toEndOf="@+id/textViewTip"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustom" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="43dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textViewTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTip" />

    <TextView
        android:id="@+id/textViewTotalAmount"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:text="@string/textViewTotalAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/textViewTotal"
        app:layout_constraintTop_toBottomOf="@+id/textViewTipAmount" />

    <RadioGroup
        android:id="@+id/radiogroupSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toEndOf="@+id/textViewSplit"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalAmount">

        <RadioButton
            android:id="@+id/radioButtonOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radioButtonSplitOne" />

        <RadioButton
            android:id="@+id/radioButtonTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonSplitTwo" />

        <RadioButton
            android:id="@+id/radioButtonThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonSplitThree" />

        <RadioButton
            android:id="@+id/radioButtonFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButtonSplitFour" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewSplit"
        android:layout_width="58dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:text="@string/textViewSplit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotal" />

    <TextView
        android:id="@+id/textViewTotalPerson"
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:text="@string/textViewTotalPerson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSplit" />

    <TextView
        android:id="@+id/textViewTotalPersonAmount"
        android:layout_width="68dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:text="@string/textViewTotalPersonAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toEndOf="@+id/textViewTotalPerson"
        app:layout_constraintTop_toBottomOf="@+id/radiogroupSplit" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="252dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/white"
        android:text="Clear"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalPersonAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>